Dashboard, content and sidebar styled
Add logos and fix content-sidebar alignment next

--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
             <div class="intro">
                 <div class="logo-2">Logo2</div>
                 <p>Hi there, Dhairya Shah</p>
-                <button class="new">New</button>
-                <button class="upload">Upload</button>
-                <button class="share">Share</button>
+                <button class="btn">New</button>
+                <button class="btn">Upload</button>
+                <button class="btn">Share</button>
             </div>
         </div>
         <div id="dashboard">
             <div class="db-1">
-                <div class="logo-0">Logo0</div>
                 <div>Dashboard</div>
             </div>
             <div class="db-2">
@@ -46,22 +45,62 @@
         <div id="content">
             <div>Your Projects</div>
             <div class="cards">
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="card">
+                    <div>Super Cool Project</div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi corrupti ex quos totam, 
+                        sequi, minus quae perferendis quas obcaecati ut deleniti labore, eum nobis. Consectetur 
+                        eveniet tempore incidunt error veritatis.</p>
+                </div>
+                <div class="card">
+                    <div>Super Cool Project</div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi corrupti ex quos totam, 
+                        sequi, minus quae perferendis quas obcaecati ut deleniti labore, eum nobis. Consectetur 
+                        eveniet tempore incidunt error veritatis.</p>
+                </div>
+                <div class="card">
+                    <div>Super Cool Project</div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi corrupti ex quos totam, 
+                        sequi, minus quae perferendis quas obcaecati ut deleniti labore, eum nobis. Consectetur 
+                        eveniet tempore incidunt error veritatis.</p>
+                </div>
+                <div class="card">
+                    <div>Super Cool Project</div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi corrupti ex quos totam, 
+                        sequi, minus quae perferendis quas obcaecati ut deleniti labore, eum nobis. Consectetur 
+                        eveniet tempore incidunt error veritatis.</p>
+                </div>
+                <div class="card">
+                    <div>Super Cool Project</div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi corrupti ex quos totam, 
+                        sequi, minus quae perferendis quas obcaecati ut deleniti labore, eum nobis. Consectetur 
+                        eveniet tempore incidunt error veritatis.</p>
+                </div>
+                <div class="card">
+                    <div>Super Cool Project</div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi corrupti ex quos totam, 
+                        sequi, minus quae perferendis quas obcaecati ut deleniti labore, eum nobis. Consectetur 
+                        eveniet tempore incidunt error veritatis.</p>
+                </div>
             </div>
         </div>
         <div id="sidebar">
-            <div class="announcements">
+            <div>
                 <div>Announcements</div>
-                <div class="sidebard-card"></div>
+                <div class="sidebard-card">
+                    <div>Super Cool Project</div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi corrupti ex quos totam, 
+                        sequi, minus quae perferendis quas obcaecati ut deleniti labore, eum nobis. Consectetur 
+                        eveniet tempore incidunt error veritatis.</p>
+                </div>
             </div>
-            <div class="trending">
+            <div>
                 <div>Trending</div>
-                <div class="sidebard-card"></div>
+                <div class="sidebard-card">
+                    <div>Super Cool Project</div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi corrupti ex quos totam, 
+                        sequi, minus quae perferendis quas obcaecati ut deleniti labore, eum nobis. Consectetur 
+                        eveniet tempore incidunt error veritatis.</p>
+                </div>
             </div>
         </div>
     </div>
